deactivated links from home page unless user uses a log in option and modified #tags-label to #label-tags to see if it would correct display issue on mobile

--- a/src/mylegendexperience.css
+++ b/src/mylegendexperience.css
@@ -52,7 +52,7 @@
     z-index: 30;
 }
 
-#tags-label {
+#label-tags {
     font-family: var(--font-family);
     display: flex;
     justify-content: center;
